pkl-core/src/test/files/LanguageSnippetTests/input/errors/objectCannotHaveElement.pkl
class Foo {
  normalProperty: Boolean
  nestedStructure: Bar
}

class Bar {
  propertyInNestedStructure: Listing<String>
}

foo = new Foo {
  (nestedStructure.propertyInNestedStructure) {
    "Hello world"
  }
  normalProperty = true
}
